k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      containers:
        - name: otus-app
          image: b12k/otus-app:0.0.1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
